testsuite/poke.pkl/funcall-def-diag-9.pk
/* { dg-do compile } */

fun foo = (int[2] a = [1,2,3]) void: {} /* { dg-error "" } */
